removed redundant if stmt